@@ -1,3 +1,13 @@
+2008-01-27  Joe English  <jenglish@users.sourceforge.net>
+
+	* unix/tkUnixRFont.c: Merged common code from InitFont()
+	and TkpGetFontAttrsForChar(), factored into GetTkFontAttributes()
+	and GetTkFontMetrics().  Removed write-only struct UnixFtFont
+	member 'drawable'.  Removed unneeded double-pointer indirections.
+	Ensure that TkFontAttributes.family member is a Tk_Uid, as
+	specified.  Use FcTypeDouble for XFT_SIZE attribute.
+	Finally: fix [Bug 835848].
+
 2008-01-25  Don Porter  <dgp@users.sourceforge.net>
 
 	* changes:	Updates for 8.5.1 release.
